force-app/main/default/objects/tc9_pr__Leave_Rule_Item__c/tc9_pr__Leave_Rule_Item__c.object-meta.xml
<CustomObject>
    <label>Leave Rule Item</label>
    <nameField>
        <displayFormat>LRI-{0000000000}</displayFormat>
        <label>Leave Rule Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Rule Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>