force-app/main/default/objects/tc9_pr__Leave_Rule_Item__c/fields/Dec_Hire__c.field-meta.xml
<CustomField>
    <fullName>Dec_Hire__c</fullName>
    <label>Dec Hire</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>