force-app/main/default/objects/tc9_pr__Leave_Rule_Item__c/fields/Feb_Dec_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Feb_Dec_in_Days__c</fullName>
    <label>Feb - Dec (in Days)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>