force-app/main/default/objects/tc9_pr__Leave_Rule_Item__c/fields/Jun_Dec_in_days__c.field-meta.xml
<CustomField>
    <fullName>Jun_Dec_in_days__c</fullName>
    <label>Jun-Dec(in days)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>