force-app/main/default/objects/tc9_pr__Leave_Rule_Item__c/fields/Leave_Grant_in_days__c.field-meta.xml
<CustomField>
    <fullName>Leave_Grant_in_days__c</fullName>
    <label>Leave Grant (in days)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>