force-app/main/default/objects/tc9_pr__Leave_Rule_Item__c/fields/Pro_rate_leave_in_the_first_year__c.field-meta.xml
<CustomField>
    <fullName>Pro_rate_leave_in_the_first_year__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pro-rate leave in the first year based on the employee&apos;s hire month</inlineHelpText>
    <label>Pro-rate leave in the first year</label>
    <type>Checkbox</type>
</CustomField>