force-app/main/default/objects/tc9_pr__Leave_Rule_Item__c/fields/tc9_pr__Accrual_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Accrual_Rate__c</fullName>
    <description>The value to be applied to the payee leave balance based on the Accrual Type selected</description>
    <inlineHelpText>The value to be applied to the payee leave balance based on the Accrual Type selected</inlineHelpText>
    <label>Accrual Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>