force-app/main/default/objects/tc9_pr__Leave_Rule_Item__c/fields/tc9_pr__Service_Ends_At__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Service_Ends_At__c</fullName>
    <description>Where the Accrual Type is Service Based this field defines the point at which this item should end</description>
    <inlineHelpText>Where the Accrual Type is Service Based this field defines the point at which this item should end</inlineHelpText>
    <label>Service Ends At</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>