force-app/main/default/objects/tc9_pr__Leave_Rule_Item__c/fields/tc9_pr__Service_Units__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Service_Units__c</fullName>
    <description>Where the Accrual Type is Service Based this field defines the service period in asociation with Service Starts At and Service Ends At</description>
    <inlineHelpText>Where the Accrual Type is Service Based this field defines the service period in asociation with Service Starts At and Service Ends At</inlineHelpText>
    <label>Service Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>