force-app/main/default/objects/tc9_pr__Leave_Rule_Item__c/fields/tc9_pr__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Sort_Order__c</fullName>
    <description>Where multiple Leave Rule Items are related to the same rule this field indicates the order in which the Leave Rule Items should be assesed.</description>
    <inlineHelpText>Where multiple Leave Rule Items are related to the same rule this field indicates the order in which the Leave Rule Items should be assesed.</inlineHelpText>
    <label>Sort Order</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>