force-app/main/default/objects/tc9_pr__Leave_Rule_Item__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Leave_Rule__c</columns>
    <columns>tc9_pr__Accrual_Type__c</columns>
    <columns>tc9_pr__Service_Starts_At__c</columns>
    <columns>tc9_pr__Service_Ends_At__c</columns>
    <columns>tc9_pr__Service_Units__c</columns>
    <columns>tc9_pr__Accrual_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>